# DataRadar

./: .env.example  .gitignore  MELHORIAS.md  README.md  RESUMO_EXECUTIVO.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml  deploy-airflow.yml
airflow/: .dockerignore  Dockerfile  docker-compose.yml  packages.txt  requirements.txt
airflow/.astro/: config.yaml
airflow/dags/: .airflowignore  dag_reddit_ingestion.py  dag_reddit_ingestion_local.py  dag_reddit_scheduled.py  task_generate_insights.py
airflow/scripts/: extract_reddit.py
app/: main.py  requirements.txt
app/routers/: bronze.py  ingest.py  pipeline.py
app/services/: bronze_reader.py  databricks_client.py  mock_layers.py
app/static/: app.js  data.json  index.html  styles.css
databricks/: README.md
databricks/notebooks/: medallion_helpers.py  medallion_pipeline.py  medallion_schemas.py  medallion_transforms.py
databricks/sql/: create_gold_ai_insights.sql  create_gold_ai_insights_v2.sql  query_examples.sql
docs/: architecture.md  automation-plan.md  deploy-guide.md  deploy-strategy.md  linkedin-post.md  setup.md
docs/assets/: DIAGRAMAS.md  arquitetura_dataradar.excalidraw  arquitetura_dataradar.mmd
lambda/: handler.py
scripts/: export_snapshot.py  generate_insights.py  replay_lambda.py  test_s3_upload.py  trigger_dag.py
terraform/: README.md  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  ssm.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_bronze_reader.py  test_databricks_client.py  test_extract_reddit.py  test_lambda_handler.py  test_mock_layers.py
(+1 files in other folders)
