[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataradar"
version = "0.1.0"
description = "Pipeline de insights sobre comunidades tech do Reddit — Medallion Architecture"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["airflow/scripts", "app", "lambda"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105"]

# Databricks injeta spark/dbutils; %run carrega schemas/helpers/transforms em runtime.
[tool.ruff.lint.per-file-ignores]
"databricks/notebooks/medallion_pipeline.py" = ["F821"]
